changed the name of folder

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <nav>
                 <ul>
                     <li><a href="./aboutUs.html">About US</a></li>
-                    <li><a href="./references.html">References</a></li>
+                    <li><a href="#">References</a></li>
                     <li><a href="#">CopyRight</a></li>
                     <li><a href="#">News</a></li>
                 </ul>
