--- a/aboutUs.html
+++ b/aboutUs.html
@@ -16,7 +16,7 @@
             <!-- <div ="title"><h1>Textile Waste</h1></div> -->
                 <ul>
                     <li><a href="./index.html">Home</a></li> <!--Home page-->
-                    <li><a href="./interest.html">Data Tables</a></li>
+                    <li><a href="./interest.html">Interests</a></li>
                     <li><a href="./contacts.html">Contacts</a></li>
                 </ul>
             </nav>
