--- a/interest.html
+++ b/interest.html
@@ -18,7 +18,7 @@
             <!-- <div ="title"><h1>Textile Waste</h1></div> -->
                 <ul>
                     <li><a href="./index.html">Home</a></li> <!--Home page-->
-                    <li><a href="./dataTables.html">Data Tables</a></li>
+                    <li><a href="./interest.html">Interests</a></li>
                     <li><a href="./contacts.html">Contacts</a></li>
                 </ul>
             </nav>
