Changed the fonts of interest page

--- a/interest.html
+++ b/interest.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Topic Interest page</title>
-        <link rel="stylesheet" href="/global.css">
+        <link rel="stylesheet" href="./global.css">
        
         <script src="https://kit.fontawesome.com/8d064ea2e4.js" crossorigin="anonymous"></script>
 
