minor changes to Nav

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <!--footer pages-->
             <nav>
                 <ul>
-                    <li><a href="./aboutUs.html">About US</a></li>
+                    <li><a href="./aboutUs.html">About website</a></li>
                     <li><a href="#">References</a></li>
                     <li><a href="#">CopyRight</a></li>
                     <li><a href="#">News</a></li>
