add link to sign up

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     long way to go. 
                     I enjoy spending time in front of a computer and playing around. Recently, I 
                     tried to develop some swimming skills too. 
-                    <a href="https://seattle.curbed.com/maps/outdoor-swimming-beaches-pools-seattle" style="color:green;">Click here</a> to see a 
+                    <a href="./login.html" style="color:green;">Click here</a> to see a 
                     list of outdoor swimming beaches.
                 </p>
             </div>
